--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+  
 }
 
 .logo {
@@ -9,6 +14,22 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+}
+
+.left-links ul {
+  display: flex;
+  justify-content: flex-start;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
+}
+
+.right-links ul {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
 }
 
 ul {
